tests/fixtures/multi_module/valid/cross_module_type/b.furqan
bismillah B {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: declare
    not_scope: nothing_excluded
}

type Report {
    zahir { name: String }
    batin { id: ID }
}

fn make_report() -> Report {
    return Report
}
