tests/fixtures/multi_module/invalid/transitive_type/base.furqan
bismillah Base {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: types
    not_scope: nothing_excluded
}

type BaseType {
    zahir { name: String }
    batin { id: ID }
}

fn make_base() -> BaseType {
    return BaseType
}
